[gd_scene load_steps=8 format=1]

[ext_resource path="res://scripts/enemy1.gd" type="Script" id=1]
[ext_resource path="res://scenes/creep_scenes/enemy_bullet_1.tscn" type="PackedScene" id=2]
[ext_resource path="res://art/PNG/enemyBlack1.png" type="Texture" id=3]

[sub_resource type="CircleShape2D" id=1]

custom_solver_bias = 0.0
radius = 49.6326

[sub_resource type="StyleBoxFlat" id=2]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
bg_color = Color( 1, 0, 0, 1 )
light_color = Color( 1, 0, 0, 1 )
dark_color = Color( 1, 0, 0, 1 )
border_size = 0
border_blend = false
draw_bg = true

[sub_resource type="CircleShape2D" id=3]

custom_solver_bias = 0.0
radius = 400.0

[sub_resource type="Animation" id=4]

resource/name = "ability_1"
length = 3.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:modulate")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 3 ),
"transitions": FloatArray( 2.14355, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.707031, 0.00828552, 0.00828552, 1 ) ]
}

[node name="enemy1" type="KinematicBody2D" groups=[
"enemy",
]]

transform/scale = Vector2( 0.5, 0.5 )
input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
collision/margin = 0.08
script/script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}
bullet = ExtResource( 2 )
damage = 4

[node name="sprite" type="Sprite" parent="."]

texture = ExtResource( 3 )

[node name="collision" type="CollisionShape2D" parent="."]

visibility/visible = false
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="gun" type="Position2D" parent="."]

transform/pos = Vector2( 0, 40 )

[node name="bullet_container" type="Node" parent="."]

[node name="bullet_rate" type="Timer" parent="."]

process_mode = 1
wait_time = 0.5
one_shot = true
autostart = false

[node name="control" type="Control" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0

[node name="hp_bar" type="ProgressBar" parent="control"]

rect/scale = Vector2( 1, 0.5 )
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -40.0
margin/top = -55.0
margin/right = 40.0
margin/bottom = -39.0
custom_styles/fg = SubResource( 2 )
custom_colors/font_color = Color( 0, 1, 0, 1 )
range/min = 0.0
range/max = 1000.0
range/step = 1.0
range/page = 0.0
range/value = 500.0
range/exp_edit = false
range/rounded = false
percent/visible = false

[node name="agro_range" type="Area2D" parent="."]

input/pickable = true
shapes/0/shape = SubResource( 3 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision/layers = 3
collision/mask = 3

[node name="collision" type="CollisionShape2D" parent="agro_range"]

visibility/visible = false
shape = SubResource( 3 )
trigger = true
_update_shape_index = 0

[node name="action" type="Timer" parent="."]

process_mode = 1
wait_time = 3.0
one_shot = true
autostart = false

[node name="animation" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/ability_1 = SubResource( 4 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[connection signal="body_enter" from="agro_range" to="." method="_on_Area2D_body_enter"]

[connection signal="body_exit" from="agro_range" to="." method="_on_agro_range_body_exit"]

[connection signal="timeout" from="action" to="." method="_on_action_timeout"]


